completed componets js file and fixed index.html

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   
-  <title>Shortly URL </title>
+  <!-- <title>Shortly URL </title> -->
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
@@ -28,8 +28,6 @@
   Build your brand’s recognition and get detailed insights 
   on how your links are performing.
 
-  Get Started
-  
   Shorten a link here...
 
   Shorten It!
